// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input demo -- input 1`] = `
.c12 {
  vertical-align: baseline;
}

.c26 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c27 .c25 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c24 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c24 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c24 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  padding-right: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c24 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c24 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c24 input:disabled,
.c24 input[disabled] {
  box-shadow: none;
}

.c24 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c24 input::-moz-placeholder {
  color: #abb4c3;
}

.c24 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c24 input::placeholder {
  color: #abb4c3;
}

.c24 .c25 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c28 .c25 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c29 .c25 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c30 .c25 {
  width: 32px;
  height: 32px;
  line-height: 32px;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #3555f6;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c32 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c32:last-child {
  margin-right: 0;
}

.c7 .c33+.c33 {
  margin-left: -1px;
}

.c7 .c31 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c31:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c31:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3555f6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        icon
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            circle-fill
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            circle
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            loading
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c24"
    >
      <input />
      <span
        class="c25 c26"
      >
        <i
          class="uc-fe-icon icon__circle-fill c12"
          type="circle-fill"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-disabled 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  color: #bbb;
}

.c0,
.c0 input,
.c0 .style__SearchIcon-sc-11j0fsv-1 {
  cursor: not-allowed;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  padding-right: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c0 input:disabled,
.c0 input[disabled] {
  box-shadow: none;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c4 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c4 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  padding-right: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c4 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c4 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c4 input:disabled,
.c4 input[disabled] {
  box-shadow: none;
}

.c4 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c4 input::-moz-placeholder {
  color: #abb4c3;
}

.c4 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c4 input::placeholder {
  color: #abb4c3;
}

.c4 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      disabled=""
    >
      <input
        disabled=""
      />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle c3"
          type="circle"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c4"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle c3"
          type="circle"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-icon 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c4 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  padding-right: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c0 input:disabled,
.c0 input[disabled] {
  box-shadow: none;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle-fill c3"
          type="circle-fill"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle c3"
          type="circle"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__loading c3"
          type="loading"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-size 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 22px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c0 input:disabled,
.c0 input[disabled] {
  box-shadow: none;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 .c3 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c1 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c1 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c1 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c1 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c1 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c1 input:disabled,
.c1 input[disabled] {
  box-shadow: none;
}

.c1 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 input::-moz-placeholder {
  color: #abb4c3;
}

.c1 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 input::placeholder {
  color: #abb4c3;
}

.c1 .c3 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c2 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c2 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 32px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c2 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c2 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c2 input:disabled,
.c2 input[disabled] {
  box-shadow: none;
}

.c2 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c2 input::-moz-placeholder {
  color: #abb4c3;
}

.c2 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c2 input::placeholder {
  color: #abb4c3;
}

.c2 .c3 {
  width: 32px;
  height: 32px;
  line-height: 32px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c1"
    >
      <input />
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c2"
    >
      <input />
    </span>
  </div>
</div>
`;

exports[`Input demo -- search 1`] = `
.c12 {
  vertical-align: baseline;
}

.c26 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c28 {
  cursor: pointer;
}

.c29,
.c29 input,
.c29 .c27 {
  cursor: not-allowed;
}

.c29 .c25 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c24 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c24 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c24 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  padding-right: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c24 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c24 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c24 input:disabled,
.c24 input[disabled] {
  box-shadow: none;
}

.c24 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c24 input::-moz-placeholder {
  color: #abb4c3;
}

.c24 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c24 input::placeholder {
  color: #abb4c3;
}

.c24 .c25 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c30 .c25 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c31 .c25 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c32 .c25 {
  width: 32px;
  height: 32px;
  line-height: 32px;
}

.c33 .c25 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c34 .c25 {
  width: 32px;
  height: 32px;
  line-height: 32px;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #3555f6;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c36 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c36:last-child {
  margin-right: 0;
}

.c7 .c37+.c37 {
  margin-left: -1px;
}

.c7 .c35 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c35:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c35:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3555f6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c24"
    >
      <input />
      <span
        class="c25 c26"
      >
        <i
          class="c27 c28 uc-fe-icon icon__search c12"
          type="search"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-disabled 1`] = `
.c5 {
  vertical-align: baseline;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c4 {
  cursor: pointer;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  color: #bbb;
}

.c0,
.c0 input,
.c0 .c3 {
  cursor: not-allowed;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  padding-right: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c0 input:disabled,
.c0 input[disabled] {
  box-shadow: none;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c6 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c6 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  padding-right: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c6 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c6 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c6 input:disabled,
.c6 input[disabled] {
  box-shadow: none;
}

.c6 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 input::-moz-placeholder {
  color: #abb4c3;
}

.c6 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 input::placeholder {
  color: #abb4c3;
}

.c6 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c7 .c1 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c8 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c9 .c1 {
  width: 32px;
  height: 32px;
  line-height: 32px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      disabled=""
    >
      <input
        disabled=""
      />
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__search c5"
          type="search"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c6"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__search c5"
          type="search"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-size 1`] = `
.c5 {
  vertical-align: baseline;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c4 {
  cursor: pointer;
}

.c8,
.c8 input,
.c8 .c3 {
  cursor: not-allowed;
}

.c8 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c6 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c6 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  padding-right: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c6 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c6 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c6 input:disabled,
.c6 input[disabled] {
  box-shadow: none;
}

.c6 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 input::-moz-placeholder {
  color: #abb4c3;
}

.c6 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 input::placeholder {
  color: #abb4c3;
}

.c6 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c9 .c1 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c10 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c11 .c1 {
  width: 32px;
  height: 32px;
  line-height: 32px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 22px;
  padding-right: 22px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c0 input:disabled,
.c0 input[disabled] {
  box-shadow: none;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 .c1 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c7 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c7 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 32px;
  padding-right: 32px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c7 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c7 input:disabled,
.c7 input[disabled] {
  box-shadow: none;
}

.c7 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7 input::-moz-placeholder {
  color: #abb4c3;
}

.c7 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c7 input::placeholder {
  color: #abb4c3;
}

.c7 .c1 {
  width: 32px;
  height: 32px;
  line-height: 32px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__search c5"
          type="search"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c6"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__search c5"
          type="search"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c7"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__search c5"
          type="search"
        />
      </span>
    </span>
  </div>
</div>
`;
